@@ -1,3 +1,8 @@
+2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* Deployment/WebDeployService.cs, Project/AspNetAppProject.cs,
+	  Parser/Document.cs: Track LoggingService API changes.
+
 2007-11-02  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Project/VerifyCodeBehindBuildStep.cs: Use RootCombine instead of
